- The default value of the INTERMediatorLog.suppressDebugMessageOnPage is changed from false to true.
  The debug messages on the page is going to be deprecated.
- IMLibAuthenticationUI.loginPanel2FAHTML can have the HTML code for the custom 2FA panel. In this HTML, the code text
  box (id = '_im_code_2FA') and the auth button (id = '_im_authbutton_2FA') must be included.
- [Bug Fix]On version 12, INTERMediator.clearCondition method clears page number of pagination in any case.
  INTERMediator.clearCondition should be cleared any parameter, just clears all conditions.
- [SECURITY ISSUES] The account manager of sample code can be accessed on same case. So the samples are moved to
  another repository.

Ver.14 (June 16, 2025)
- From this version, minimum supporting PHP version is 8.1.
- Add support for PHP 8.4.
- FX.php has code that using deprecated way in PHP 8.4, and various adjustments would be needed to make it work with
  PHP 8. However, there are currently no new projects using FX.php, we will discontinue support for FX.php and CWPKit.
- The prompt for LLM-based AI programming is added to /dist-docs/promputs. You can try it with Windsurf.
- Charting feature is implemented with chart.js. The new html attribute data-im-widget-alone has to be used for charging,
  and the value should be as like "chartjs@saleslog|bar|customer|数量,単価|qty,unitprice". The sample is
  /sample/Sample_webpage/char_MySQL.*.
- Authentication with My Number Card is implemented as a provider for OAuth2. The sample code is another repository:
  https://github.com/INTER-Mediator/IMTesting_MyNumberCard.
- GitHub Action php-legacy.yml was deleted. Also the INTER-Mediator-UnitTest_Legacy the unit test with PHP 7 was removed.
- Any sensitive information as like a password or a key can store on any place other than repository. The variable $profileRoot
  of the params.php file specifies any path, and home directory are search path. For example, the ~/.im/credentials file